--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,19 @@
+aniso8601==9.0.1
+certifi==2022.6.15
+charset-normalizer==2.1.0
+click==8.1.3
+colorama==0.4.5
+Flask==2.1.3
+Flask-RESTful==0.3.9
+idna==3.3
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
 MIDIUtil==1.2.1
+packaging==21.3
+pyparsing==3.0.9
+pytz==2022.1
+requests==2.28.1
+six==1.16.0
+urllib3==1.26.10
+Werkzeug==2.1.2
